--- a/woman.html
+++ b/woman.html
@@ -118,20 +118,24 @@
         <section class="">
             <div class="container">
                 <nav class="breadcrumbs navbar-expand-lg ">
-                        <ul class="breadcrumbs-nav">
-                            <!-- <li class="breadcrumbs-nav-item">
-                                <a class="breadcrumbs-brand" href="#"><i class="fas fa-home"></i>
-                            </li> -->
-                            <li class="breadcrumbs-nav-item">
-                                <a href="#"> Женщинам</a>
-                            </li>
-                            <li class="breadcrumbs-nav-item">
-                                <a href="#">&gt; Одежда</a>
-                            </li>
-                            <li class="breadcrumbs-nav-item">
-                                <a href="#">&gt; Платья </a>
-                            </li>
-                        </ul>
+                    <ul class="breadcrumbs-nav">
+                        <li class="breadcrumbs-nav-item">
+                            <a class="breadcrumbs-nav-item__link" href="./index.html">Главная</a>
+                        </li>
+                        <li class="breadcrumbs-nav-item">
+                            <span class="">></span>
+                        </li>
+                        <li class="breadcrumbs-nav-item">
+                            <a class="breadcrumbs-nav-item__link" href="./woman.html">Одежда</a>
+                        </li>
+                        <li class="breadcrumbs-nav-item">
+                            <span class="">></span>
+                        </li>
+                        <li class="breadcrumbs-nav-item">
+                            <a class="breadcrumbs-nav-item__link" id="breadcrumbs-place" href="#"></a>
+                        </li>
+
+                    </ul>
                 </nav>
                 <div class="goods-woman-wrapper">
 
