--- a/index.html
+++ b/index.html
@@ -131,10 +131,42 @@
             <!-- </div> -->
         </section>
 
-        <section class="">
+        <section class="ba-brands">
+            <!-- <div class="container"> -->
+            <a href="#">
+                <img src="./img/brand_1.png" alt="" class="brands-items">
+            </a>
+            <a href="#">
+                <img src="./img/brand_2.png" alt="" class="brands-items">
+            </a>
+            <a href="#">
+                <img src="./img/brand_4.png" alt="" class="brands-items">
+            </a>
+            <a href="#">
+                <img src="./img/brand_5.png" alt="" class="brands-items">
 
-            <div class="ba-baners">
-                <!-- <div class="container"> -->
+            </a>
+            <a href="#">
+                <img src="./img/brand_6.png" alt="" class="brands-items">
+            </a>
+            <a href="#">
+                <img src="./img/brand_7.png" alt="" class="brands-items">
+            </a>
+            <a href="#">
+                <img src="./img/brand_8.png" alt="" class="brands-items">
+            </a>
+            <a href="#">
+                <img src="./img/brand_3.png" alt="" class="brands-items">
+            </a>
+
+            <!-- </div> -->
+
+        </section>
+
+
+        <section class="ba-baners">
+
+            <div class="container">
                 <div class="look-row ba-baners__item">
                     <a href="#" class="ba-baners__item ba-col-6 ba-baners-row ba-baners-left">
                         <img src="./img/best_outfits.jpg" alt="">
@@ -153,36 +185,9 @@
                         </div>
                     </div>
                 </div>
-                <!-- </div> -->
-
             </div>
 
-        </section>
 
-
-        <section>
-            <div class="subscribe">
-                <div class="container">
-                    <div class="subscribe-mail ba-col-12 ba-col-md-6">
-                        <span>Подписаться</span>
-                        <input class="subscribe-mail__input" type="text" placeholder="Ваш email">
-                        <button class="btn btn_white-brdr"><i class="fas fa-plus"></i></button>
-                    </div>
-
-                    <div class="ba-social ba-col-12 ba-col-md-4">
-                        <span class="ba-col-4">Мы здесь</span>
-
-                        <div class="ba-social-wrapper">
-                            <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-facebook-f"
-                                    aria-hidden="true"></i></a>
-                            <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-twitter"
-                                    aria-hidden="true"></i></a>
-                            <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-instagram"
-                                    aria-hidden="true"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <section class="goods">
@@ -376,34 +381,27 @@
             </div>
         </section>
 
-        <section class="ba-brands">
+
+        <section class="subscribe">
             <div class="container">
-                <a href="#">
-                    <img src="./img/brand_1.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_2.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_4.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_5.png" alt="" class="brands-items">
+                <div class="subscribe-mail ba-col-12 ba-col-md-6">
+                    <span>Подписаться</span>
+                    <input class="subscribe-mail__input" type="text" placeholder="Ваш email">
+                    <button class="btn btn_white-brdr"><i class="fas fa-plus"></i></button>
+                </div>
 
-                </a>
-                <a href="#">
-                    <img src="./img/brand_6.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_7.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_8.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_3.png" alt="" class="brands-items">
-                </a>
+                <div class="ba-social ba-col-12 ba-col-md-4">
+                    <span class="ba-col-4">Мы здесь</span>
 
+                    <div class="ba-social-wrapper">
+                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-facebook-f"
+                                aria-hidden="true"></i></a>
+                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-twitter"
+                                aria-hidden="true"></i></a>
+                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-instagram"
+                                aria-hidden="true"></i></a>
+                    </div>
+                </div>
             </div>
 
         </section>
@@ -411,7 +409,8 @@
         <section class="ba-about">
             <div class="container">
                 <h2>О компании</h2>
-                <p>Lookshop это 22 роскошных бутика в Харькове, Киеве, Одессе и Днепре. В сети представлены ведущие модные марки
+                <p>Lookshop это 22 роскошных бутика в Харькове, Киеве, Одессе и Днепре. В сети представлены ведущие
+                    модные марки
                     - за долгие годы работы компания приобрела богатейший опыт в работе с уникальными, эксклюзивными
                     коллекциями. Дистрибуция модной мужской и женской одежды, обуви и аксессуаров является одной из
                     важных сфер деятельности компании. </p>
@@ -646,7 +645,7 @@
                     </div>
                 </div> -->
             </a>
-        </div>
+            </!-->
     </footer>
 
     <div class="cart">
