--- a/woman.html
+++ b/woman.html
@@ -241,16 +241,22 @@
 
     <footer class="ba-footer">
         <div class="container">
-            <span>© Lookshop.com, 2020 All Rights Reserved</span>
-            <div>Покупателю</div>
-            <div>О компании</div>
-            <div>Контакты
-                <div class="ba-social">
-                    <a href="#" class="ba-social__items"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
-                    <a href="#" class="ba-social__items"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-                    <a href="#" class="ba-social__items"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-                </div>
-            </div>
+            <span class="ba-footer__items">© Lookshop.com, 2020 All Rights Reserved</span>
+            <a href="#" class="ba-footer__items">Возврат</a>
+            <a href="#" class="ba-footer__items">Доставка</a>
+            <a href="#" class="ba-footer__items">Заказы
+
+                <!-- <div class="ba-social ba-col-12 ba-col-md-4">
+                    <div class="ba-social-wrapper">
+                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-facebook-f"
+                                aria-hidden="true"></i></a>
+                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-twitter"
+                                aria-hidden="true"></i></a>
+                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-instagram"
+                                aria-hidden="true"></i></a>
+                    </div>
+                </div> -->
+            </a>
         </div>
     </footer>
 
