--- a/index.html
+++ b/index.html
@@ -133,30 +133,29 @@
 
         <section class="ba-brands">
             <!-- <div class="container"> -->
-            <a href="#">
-                <img src="./img/brand_1.png" alt="" class="brands-items">
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_1.png" alt="" class="brands-items__img">
             </a>
-            <a href="#">
-                <img src="./img/brand_2.png" alt="" class="brands-items">
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_2.png" alt="" class="brands-items__img">
             </a>
-            <a href="#">
-                <img src="./img/brand_4.png" alt="" class="brands-items">
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_4.png" alt="" class="brands-items__img">
             </a>
-            <a href="#">
-                <img src="./img/brand_5.png" alt="" class="brands-items">
-
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_5.png" alt="" class="brands-items__img">
             </a>
-            <a href="#">
-                <img src="./img/brand_6.png" alt="" class="brands-items">
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_6.png" alt="" class="brands-items__img">
             </a>
-            <a href="#">
-                <img src="./img/brand_7.png" alt="" class="brands-items">
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_7.png" alt="" class="brands-items__img">
             </a>
-            <a href="#">
-                <img src="./img/brand_8.png" alt="" class="brands-items">
-            </a>
-            <a href="#">
-                <img src="./img/brand_3.png" alt="" class="brands-items">
+            <!-- <a class="ba-brands-items" href="#">
+                <img src="./img/brand_8.png" alt="" class="brands-items__img">
+            </a> -->
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_3.png" alt="" class="brands-items__img">
             </a>
 
             <!-- </div> -->
