--- a/woman.html
+++ b/woman.html
@@ -166,7 +166,23 @@
                             </li>
                         </ul>
                         <h5 class="category__title">Бренды</h5>
-
+                        <ul class="category-list">
+                            <li>
+                                <a href="#" class="category-item category-item__" data-category="dresses">Balmain</a>
+                            </li>
+                            <li>
+                                <a href="#" class="category-item category-item__" data-category="skirts">Balenciaga</a>
+                            </li>
+                            <li>
+                                <a href="#" class="category-item category-item__" data-category="tops">MaxMara</a>
+                            </li>
+                            <li>
+                                <a href="#" class="category-item category-item__" data-category="svitera">Prada</a>
+                            </li>
+                            <li>
+                                <a href="#" class="category-item category-item__" data-category="sport">Valentino</a>
+                            </li>
+                        </ul>
                     </aside>
                     <div class="ba-row goods-wrapper">
                     </div>
@@ -192,34 +208,34 @@
             </div>
         </section>
 
-        <section class="ba-brands hidden-sm">
-            <div class="container">
-                <a href="#">
-                    <img src="./img/brand_1.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_2.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_3.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_4.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_5.png" alt="" class="brands-items">
+        <section class="ba-brands">
+            <!-- <div class="container"> -->
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_1.png" alt="" class="brands-items__img">
+            </a>
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_2.png" alt="" class="brands-items__img">
+            </a>
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_4.png" alt="" class="brands-items__img">
+            </a>
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_5.png" alt="" class="brands-items__img">
+            </a>
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_6.png" alt="" class="brands-items__img">
+            </a>
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_7.png" alt="" class="brands-items__img">
+            </a>
+            <!-- <a class="ba-brands-items" href="#">
+                <img src="./img/brand_8.png" alt="" class="brands-items__img">
+            </a> -->
+            <a class="ba-brands-items" href="#">
+                <img src="./img/brand_3.png" alt="" class="brands-items__img">
+            </a>
 
-                </a>
-                <a href="#">
-                    <img src="./img/brand_6.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_7.png" alt="" class="brands-items">
-                </a>
-                <a href="#">
-                    <img src="./img/brand_8.png" alt="" class="brands-items">
-                </a>
-            </div>
+            <!-- </div> -->
 
         </section>
 
@@ -257,7 +273,7 @@
                     </div>
                 </div> -->
             </a>
-        </div>
+            </!-->
     </footer>
 
     <div class="cart">
