--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </select> -->
                     <form class="ba-search-form">
                         <input class="ba-search-form__input" type="text" id="searchInput">
-                        <button type="submit" id="search-btn" class="search-btn" aria-label="Поиск товаров">
+                        <button type="submit" id="search-btn" class="ba-search-btn" aria-label="Поиск товаров">
                             <i class="fas fa-search"></i></button>
 
                         <!-- <div class="user__search"></div> -->
