--- a/index.html
+++ b/index.html
@@ -58,22 +58,22 @@
                     <nav class="ba-header-main-nav ba-col-sm-12 ba-col-sm-8 ba-col-md-8">
                         <ul class="ba-menu">
                             <li class="ba-menu-item">
-                                <a href="./woman.html" class="ba-menu__link">Женщинам
+                                <a href="./woman.html" class="ba-menu__link btn_white-brdr">Женщинам
                                     <!-- <span><i class="fas fa-sort-down"></i></span> -->
                                 </a>
                             </li>
                             <li class="ba-menu-item">
-                                <a href="#" class="ba-menu__link">Мужчинам
+                                <a href="#" class="ba-menu__link btn_white-brdr">Мужчинам
                                     <!-- <span><i class="fas fa-sort-down"></i></span> -->
                                 </a>
                             </li>
                             <li class="ba-menu-item">
-                                <a href="#" class="ba-menu__link">Бренды
+                                <a href="#" class="ba-menu__link btn_white-brdr">Бренды
                                     <!-- <span><i class="fas fa-sort-down"></i></span> -->
                                 </a>
                             </li>
                             <li class="ba-menu-item">
-                                <a href="#" class="ba-menu__link">Sale</a>
+                                <a href="#" class="ba-menu__link btn_white-brdr">Sale</a>
                             </li>
                         </ul>
                     </nav>
@@ -393,11 +393,11 @@
                     <span class="ba-col-4">Мы здесь</span>
 
                     <div class="ba-social-wrapper">
-                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-facebook-f"
+                        <a href="#" class="ba-social__items ba-col-4 btn_gray-brdr"><i class="fab fa-facebook-f"
                                 aria-hidden="true"></i></a>
-                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-twitter"
+                        <a href="#" class="ba-social__items ba-col-4 btn_gray-brdr"><i class="fab fa-twitter"
                                 aria-hidden="true"></i></a>
-                        <a href="#" class="ba-social__items ba-col-4 btn_white-brdr"><i class="fab fa-instagram"
+                        <a href="#" class="ba-social__items ba-col-4 btn_gray-brdr"><i class="fab fa-instagram"
                                 aria-hidden="true"></i></a>
                     </div>
                 </div>
