--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <div class="subscribe-mail ba-col-12 ba-col-md-6">
                     <span>Подписаться</span>
                     <input class="subscribe-mail__input" type="text" placeholder="Ваш email">
-                    <button class="btn btn_white-brdr"><i class="fas fa-plus"></i></button>
+                    <button class="subscribe-mail__btn btn_gray-brdr"><i class="fas fa-plus"></i></button>
                 </div>
 
                 <div class="ba-social ba-col-12 ba-col-md-4">
