--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 </form>
 
                 <div class="ba-social ba-col-12 ba-col-md-4">
-                    <span class="ba-col-4">Мы здесь</span>
+                    <span class="ba-social__descr ba-col-4">Мы здесь:</span>
 
                     <div class="ba-social-wrapper">
                         <a href="#" class="ba-social__items ba-col-4 btn_gray-brdr"><i class="fab fa-facebook-f"
