--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
         <section class="goods">
 
             <div class="container">
-                <div class="goods-title">
-                    <h5>Самые популярные</h5>
+                <div>
+                    <h5 class="goods__title">Самые популярные</h5>
                 </div>
                 <div class="ba-row goods-wrapper ba-slider2">
                     <div class="card ba-col-12 ba-col-sm-6">
@@ -207,7 +207,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">DG</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">300<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -225,7 +225,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">Balmain</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">400<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">Prada</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">500<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -261,7 +261,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">DG</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">700<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -279,7 +279,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">DG</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">900<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -297,7 +297,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">DG</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">300<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -315,7 +315,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">Balmain</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">400<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -333,7 +333,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">Prada</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">500<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -351,7 +351,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">DG</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">700<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -369,7 +369,7 @@
                         </div>
                         <div class="card-body">
                             <p class="card-body-brand">DG</p>
-                            <a class="card-body-title" href="#">Платье</a>
+                            <p class="card-body-title" href="#">Платье</p>
                             <p class="card-body-price">900<i class="fas fa-hryvnia"></i></p>
                             <button class="card-add-cart btn" role="button" data-goods-id="${id}">
                                 Добавить в корзину<span><i class="fas fa-plus"></i></span>
@@ -697,7 +697,7 @@
     <!-- tweenmax для снега -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
-    <!-- <!-- <script src="https://kit.fontawesome.com/1c19972f1c.js" crossorigin="anonymous"></!--> --> -->
+    <!--  <script src="https://kit.fontawesome.com/1c19972f1c.js" crossorigin="anonymous"></!-->
 
     <script src='./js/index.js'></script>
 
